Rename MCPMarkdownResourceLoader.load() (#38830)